--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -46,9 +46,11 @@
             <scope>runtime</scope>
         </dependency>
 
+
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.5.5</version>
         </dependency>
 
         <dependency>
